# mcp-expose-notes

./: main.py  pyproject.toml
expose_notes/: configuration.py  frontmatter.py  frontmatter_reader.py
tests/: test_canary.py  test_configuration.py  test_frontmatter.py
